# dlmcot

./: .gitignore  README.md  mmada_api.py  mmada_inference.py  pyproject.toml  requirements.txt  run_attention_analysis.sh  run_gpqa_eval.sh  run_math_eval.sh  test_mmada.py
attention_visualization/: README.md  __init__.py  analyze_attention.py  attention_analyzer.py  attention_hook.py  attention_visualizer.py  test_attention_hook.py
evaluation/: test_gpqa_direct.py  test_mmada_integration.py  test_summary.py
evaluation/gpqa/: gpqa_answer_emergence_analyzer.py  gpqa_basic.py  gpqa_emergence_scorer.py  gpqa_faithfulness_scorer.py  gpqa_with_hints.py
evaluation/math/: answer_emergence_analyzer.py  math_basic.py  math_faithfulness_scorer.py  utils.py
evaluation/model_api/: mmada_model_api.py
