[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmada-cot-faithfulness"
version = "0.1.0"
description = "MMaDA CoT Faithfulness Examination Tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "safetensors>=0.3.0",
    "numpy>=1.21.0",
    "typing-extensions>=4.0.0",
    "Pillow>=8.0.0",
    "timm>=0.9.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
include = ["mmada_modules*", "evaluation*", "*.py"]
exclude = ["tests*"]

[project.entry-points.inspect_ai]
mmada = "evaluation.model_api.mmada_model_api"
